--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
   "buildCommand": "pnpm prisma generate && pnpm build",
-  "installCOmmand": "pnpm install && pnpm prisma generate"
+  "installCommand": "pnpm install && pnpm prisma generate"
 }
