--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "pnpm prisma generate && pnpm build",
-  "installCommand": "pnpm install && pnpm prisma generate"
+  "buildCommand": "npx prisma generate && npx build",
+  "installCommand": "npx install && npx prisma generate"
 }
