--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "npx prisma generate && npx build",
-  "installCommand": "npx install && npx prisma generate"
+  "buildCommand": "npx prisma generate && next build",
+  "installCommand": "npm install && npx prisma generate"
 }
